# DiceBot

./: .envrc  .gitignore  README.md  dice-bot.cabal  flake.nix  hie.yaml  justfile  mkDeb.sh  treefmt.toml
bench/: Bench.hs
sos/: Main.hs
src/: Cast.hs  Components.hs  DicePrelude.hs  Dist.hs  Expect.hs  Main.hs  Parser.hs  RefTable.hs  Response.hs  RollM.hs  Roller.hs  Sample.hs  SosBuild.hs  SosCost.hs  SosEd.hs  SosTypes.hs  Stats.hs  TypeCheck.hs  TypeCheckerCore.hs  Util.hs
src/Components/: Basic.hs  Core.hs  Join.hs  Menus.hs
src/Sos/: Build.hs  Components.hs  Types.hs
src/Sos/Components/: Attrs.hs
tests/: Spec.hs
