cabal-version:      2.4
name:               dice-bot
version:            0.1.0.0
license:            MIT
copyright:          2022 Brian Kuhns
author:             Brian Kuhns
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -O2
    -fenable-rewrite-rules

  -- rule debuging
  -- -ddump-simpl-stats
  -- -ddump-rule-firings
  -- -ddump-rule-rewrites

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    Strict
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    FunctionalDependencies
    ScopedTypeVariables

  build-depends:
    , attoparsec
    , base
    , containers
    , criterion
    , discord-haskell
    , entropy            ==0.4.1.7
    , flow
    , formatn
    , ghc-prim
    , hashable
    , mtl
    , random
    , recursion-schemes
    , relude
    , stm
    , text
    , transformers
    , vty
    , microlens
    , microlens-th
    , data-default

  default-language: Haskell2010
  -- TODO is there a better way to specify versions for unused packages

library dice-lib
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Dist
    Parser
    RefTable
    Response
    RollM
    Sample
    Stats
    Util
    Components
    Components.Basic
    Components.Core
    Components.Join
    Components.Menus
    Sos.Build
    Sos.Components
    Sos.Components.Attrs
    Sos.Types

executable dice-bot
  import:           shared
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    dice-lib

executable sos-editor
  import:           shared
  hs-source-dirs:   sos
  main-is:          Main.hs
  ghc-options:
    -threaded
  build-depends:
    dice-lib


test-suite tests
  import:         shared
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:
    , hspec
    , dice-lib

benchmark bench
  import:         shared
  main-is:        Bench.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  build-depends:
    , hspec
    , dice-lib
