cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
license:            MIT
copyright:          2022 Brian Kuhns
maintainer:         16kuhnb@gmail.com
author:             Brian Kuhns
category:           Web

synopsis:           A dice bot for discord

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    NamedFieldPuns
    RecordWildCards
    DeriveAnyClass

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , with-utf8
    , flow
    , discord-haskell
    , attoparsec
    , recursion-schemes
    , hashable
    , containers
    , stm
    , random
    , criterion
    , formatn
    , transformers

  hs-source-dirs:     src
  other-modules:
    Dist
    Parser
    RefTable
    Response
    RollM
    Sample
    Stats
    Util
  default-language:   Haskell2010

executable dice-bot
  import:           shared
  main-is:          Main.hs
  default-language: Haskell2010

test-suite tests
  import:         shared
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:  hspec

benchmark bench
  import:         shared
  main-is:        Bench.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  build-depends:  hspec
