cabal-version:      2.4
name:               dice-bot
version:            0.1.0.0
license:            MIT
copyright:          2022 Brian Kuhns
maintainer:         16kuhnb@gmail.com
author:             Brian Kuhns
category:           Web
synopsis:           A dice bot for discord

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    Strict
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , attoparsec
    , base
    , containers
    , criterion
    , data-default
    , directory
    , discord-haskell
    , filepath
    , flow
    , formatn
    , hashable
    , mtl
    , optics-core
    , parsec
    , profunctors
    , random
    , recursion-schemes
    , relude             >=1.0
    , shower
    , singletons
    , singletons-base
    , singletons-th
    , stm
    , time
    , transformers
    , with-utf8

  default-language:   Haskell2010
  hs-source-dirs:     src
  other-modules:
    Cast
    DicePrelude
    Dist
    Parser
    RefTable
    Response
    RollM
    Sample
    Stats
    TypeCheck
    TypeCheckerCore
    Util

executable dice-bot
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src

test-suite tests
  import:         shared
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:  hspec

benchmark bench
  import:         shared
  main-is:        Bench.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  build-depends:  hspec
